# VulkanApplication

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  VulkanApplication.sln  VulkanApplication.vcxproj  VulkanApplication.vcxproj.filters  imgui.ini
Assets/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Pipeline.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.h  Vertex.h
Assets/Shaders/: colored.frag  colored_frag.spv  compile.bat  default.frag  default.vert  default_vert.spv  particle_shader.comp  particle_shader.frag  particle_shader.vert  shader.frag  shader.vert  shader_test.vert  shader_test_vert.spv  textured.frag  textured.vert  textured_frag.spv  textured_vert.spv  vert.spv
Assets/Utils/: MeshGenerator.cpp  MeshGenerator.h
Debug/: vc143.idb
Debug/VulkanAp.98a61f71.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
src/: Application.cpp  Application.h  ApplicationCore.cpp  ApplicationCore.h  Buffer.cpp  Buffer.h  BufferHelper.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Common.h  ComputePipeline.cpp  ComputePipeline.h  ConstantBuffers.h  CustomPipelineLayout.h  DebugUtilsMessenger.cpp  DebugUtilsMessenger.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorBinding.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSets.cpp  DescriptorSets.h  DeviceMemory.cpp  DeviceMemory.h  Fence.cpp  Fence.h  Graphics.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineLayout.h  (+50 more)
src/Assets/: Camera.cpp  Camera.h  Material.h  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shader.h  ShadowCamera.cpp  ShadowCamera.h
src/Assets/Shaders/: color_ps.frag  color_ps.spv  compile.bat  debug_normals.frag  debug_normals_frag.spv  default.vert  default_vert.spv  depth.frag  depth_frag.spv  depth_viewer.frag  grayscale.frag  grayscale_frag.spv  light_source.frag  light_source.vert  light_source_frag.spv  light_source_vert.spv  model_renderer.frag  model_renderer.vert  multilayer_framebuffer.geom  outline.frag  outline.vert  outline_vert.spv  post_effects.frag  present.frag  present_frag.spv  quad.vert  quad_vert.spv  shadow_debug.vert  shadow_mapping.geom  shadow_mapping.vert  sinewave.vert  sinewave_vert.spv  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv  transparent_frag.spv  transparent_ps.frag  wireframe.frag  wireframe_frag.spv
src/Assets/Utils/: MeshGenerator.cpp  MeshGenerator.h
src/Core/: Application.cpp  Application.h  BufferManager.cpp  BufferManager.h  ConstantBuffers.h  Graphics.h  GraphicsDevice.cpp  GraphicsDevice.h  Profiler.cpp  Profiler.h  RenderPassManager.cpp  RenderPassManager.h  RenderTarget.cpp  RenderTarget.h  ResourceManager.cpp  ResourceManager.h  SceneComponents.cpp  SceneComponents.h  Settings.h  UI.cpp  UI.h  VulkanHeader.h  Window.cpp
src/Core/PostEffects/: GrayScale.cpp  GrayScale.h  PostEffects.cpp  PostEffects.h
src/Core/Renderer/: IRenderer.h  QuadRenderer.cpp  QuadRenderer.h  ShadowRenderer.cpp  ShadowRenderer.h
src/Input/: Input.cpp  Input.h
src/ModelViewer/: GrayScale.cpp  GrayScale.h  LightManager.cpp  LightManager.h  ModelViewer.cpp  RenderPassManager.cpp  RenderPassManager.h  Renderer.cpp  Renderer.h
src/ModelViewer/PostEffects/: GrayScale.cpp  GrayScale.h  PostEffects.cpp  PostEffects.h
src/Samples/Base Sample/: BaseSample.cpp  fragment.glsl  vertex.glsl
src/Samples/Cubes/: Cubes.cpp  color.frag  vertex.vert
src/Samples/DeferredRendering/: DeferredRendering.cpp  deferred_geometry_fragment.glsl  deferred_lighting_fragment.glsl  fragment.glsl  vertex.glsl
src/Samples/GaussianBlur/: GaussianBlur.cpp  fragment.glsl  gaussian_blur_fragment.glsl  gaussian_blur_vertex.glsl  light_source_fragment.glsl  light_source_vertex.glsl  post_effects_fragment.glsl  vertex.glsl
src/Samples/Geometry Shader/: Geometry.cpp  fragment.glsl  geometry.glsl  normal_fragment.glsl  normal_geometry.glsl  normal_vertex.glsl  vertex.glsl
src/Samples/HDR/: HDR.cpp  fragment.glsl  light_source_fragment.glsl  light_source_vertex.glsl  post_effects_fragment.glsl  vertex.glsl
src/Samples/Instancing/: Instancing.cpp  fragment.glsl  vertex.glsl
src/Samples/OmnidirectionalShadowMap/: OmnidirectionalShadowMap.cpp  omni_shadow_fragment.glsl  omni_shadow_sf_fragment.glsl  omni_shadow_sf_geometry.glsl  omni_shadow_sf_vertex.glsl  omni_shadow_vertex.glsl  scene_fragment.glsl  scene_vertex.glsl
src/Samples/Parallax Mapping/: ParallaxMapping.cpp  fragment.glsl  vertex.glsl
src/Utils/: Bitmap.h  Helper.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h  UtilsCubemap.cpp  UtilsCubemap.h
